# cere-bro

./: .gitignore  README.md  pyproject.toml  serve.py
app/: bot_v2.py  cron.py  db.py  llm.py  main.py  router.py  session.py
app/tools/: errors.py  food.py  ideas.py  journal.py  profile.py  registry.py  tasks.py  workout.py
docs/: HANDOFF.md  v2-tool-calling-plan.md
lib/: __init__.py  config.py  db.py  models.py
lib/integrations/: __init__.py  hevy.py  tavily.py
lib/migrations/: 001_init.sql  002_workouts_profile.sql  003_food_calories.sql  004_food_macros.sql  005_tasks.sql  006_notion_pages.sql
lib/sinks/: notion.py  obsidian.py
scripts/: deploy_local.sh  deploy_prod.sh  fake_data.py  setup_notion.py
tests/: conftest.py  test_bot_v2.py  test_cron_jobs.py  test_registry.py  test_router.py  test_session.py  test_tool_errors.py  test_tool_food.py  test_tool_ideas.py  test_tool_journal.py  test_tool_profile.py  test_tool_tasks.py  test_tool_workout.py
tests/integration/: test_e2e_multiturn.py  test_e2e_routing.py
tools/: ENV_VARS.md  __init__.py  _food_helpers.py  _llm_utils.py  _shared.py  db.py  food.py  ideas.py  obsidian.py  workouts.py
